fixed navbar collapse issue

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -13,3 +13,7 @@
   background-color:#e6f0fa!important;
   box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%), inset 0 -1px 0 rgb(255 255 255 / 15%);
 }
+
+.dropdown-menu {
+    background-color:#e6f0fa!important;
+}
